ruka-lang.org/src/lib/interpreter/fixtures/type-err/pattern-type-mismatch.ruka
// expect: type mismatch
let main = () do
	let n: int = 3
	match n with
		"hi" do "string"
		else    "other"
	end
end
